[tool.poetry]
name = "fastapi-best-practices"
version = "0.1.0"
description = "FastAPI best practices project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.104.0"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
pydantic-settings = ">=2.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
langgraph = ">=0.2.0"
langchain-openai = ">=0.1.0"
langchain-core = ">=0.3.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
